--- a/package.json
+++ b/package.json
@@ -13,15 +13,21 @@
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.0",
     "bootstrap": "^4.5.3",
+    "card-validator": "^8.1.0",
+    "formik": "^2.2.6",
+    "js-datepicker": "^5.18.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.3",
+    "react-date-picker": "^8.0.7",
     "react-dom": "^17.0.1",
     "react-parallax": "^3.1.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "styled-components": "^5.2.1",
-    "web-vitals": "^0.2.4"
+    "web-vitals": "^0.2.4",
+    "yup": "^0.32.8",
+    "yup-phone": "^1.2.19"
   },
   "scripts": {
     "start": "react-scripts start",
